src/App.css
#root {
  max-width: 100%;
  margin: 0 ;
  padding: 0;

  text-align: left;
}

html, body, #root {
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  overflow-x: hidden;
}


* {
  box-sizing: border-box;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}


.event-card {
  background:whitesmoke;
  border-radius: 14px;
  overflow: hidden;
  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
  transition: transform 0.3s ease;
}

.event-card:hover {
  transform: translateY(-8px);
}

.event-image-wrapper {
  position: relative;
  height: 190px;
}

.event-image-wrapper img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.event-badge {
  position: absolute;
  top: 12px;
  left: 12px;
  background: white;
  padding: 4px 12px;
  font-size: 12px;
  border-radius: 20px;
  font-weight: 500;
}

.event-content {
  padding: 14px 16px 18px;
}

.event-date {
  font-size: 12px;
  color: #6b7280;
  margin-bottom: 4px;
}

.event-title {
  font-size: 16px;
  font-weight: 600;
  margin-bottom: 6px;
}

.event-location {
  font-size: 13px;
  color: #6b7280;
}


.event-image-wrapper,
.event-image-wrapper img,
.event-badge {
  pointer-events: none;
}

.background{
  color: "#ffffff";
   flex: 1;

}
.agenda-list {
  text-align: left;        
  margin: 0;
  padding: 0;
}

.overview {
  text-align: left;        
      
  margin-top: 8px;
}

body {
  margin: 0;
  padding: 0;
}


header {
  margin: 0;
  padding: 0;
}

/* html, body {
  margin: 0;
  padding: 0;
  width: 100%;
  overflow-x: hidden;
} */

.app-wrapper {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.home-header {
  padding: 16px 32px;
  margin: 16px 32px;
}

